<resources>
    <string name="app_name">Chronos</string>
    <string name="action_settings">Settings</string>
    <string name="duration">Duration</string>
    <string name="duration_hint">Minutes</string>
    <string name="task_name_hint">Task name</string>
    <string name="times_hint">1</string>
    <string name="every_times_sentence_middle">times every</string>
    <string name="period_hint">7</string>
    <string name="every_times_sentence_end">days</string>
    <string name="details_hint">Details</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="task_state">Task state</string>
    <string name="due_d_days_ago">Due %d days ago</string>
    <string name="due_today">Due today</string>
    <string name="due_in_days">Due in %d days</string>
    <string name="log">Log</string>
    <string name="add_log_entry">Add log entry</string>
    <string name="flexible_duration">Flexible duration</string>
    <string name="important_task">Important task</string>
    <string name="loading">Loading…</string>
    <string name="to_do_within_d_days_start">To do within</string>
    <string name="to_do_wihtin_d_days_end">days</string>
    <string name="task">Task</string>
    <string name="noon">☀</string>
    <string name="evening">🌇</string>
    <string name="now">🕑</string>
    <string name="morning">🌅</string>
    <string name="edit">✏</string>
    <string name="due_yesterday">Due yesterday</string>
    <string name="due_tomorrow">Due tomorrow</string>
    <string name="keep">Keep</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="d_minutes">%d minutes</string>
    <string name="duration_format">%d:%02d</string>
    <string name="time_for_day">Time for %s (minutes)</string>
    <string name="action_manage">Manage</string>
    <string name="backup">Backup</string>
    <string name="backup_progress_channel_name">Backups/Restore progression</string>
    <string name="backup_progress_channel_description">Backup and restore progressions</string>
    <string name="hyphen_sep"> - </string>
    <string name="all_is_done">All is done :)</string>
    <string name="restore">Restore</string>
    <string name="due_date">Due date:</string>
</resources>
